Table Products{
Id int [pk, increment]
productname varchar
unit_price decimal 
quantity int
}
Table Users{
Id int [pk, increment]
first_name varchar
last_name varchar
email_address varchar [unique]
}
Table Orders{
Order_Id int [pk, increment]
userId int [ref: > Users.Id]
ProductsId int [ref: < Products.Id]
}